--- a/index.html
+++ b/index.html
@@ -327,29 +327,29 @@
   <section class="hero">
     <div class="hero-content">
       <h1>Tobia Miniutti</h1>
-      <p>Fotografo e Videomaker • Bologna</p>
+      <p>Fotografo e Videomaker | Bologna</p>
       <a href="#portfolio" class="btn-golden">Scopri i miei lavori</a>
     </div>
   </section>
 
   <main>
     <section id="portfolio" class="fade-up">
-      <h2 class="section-title">Portfolio Selezionato</h2>
+      <h2 class="section-title">I miei lavori</h2>
       <div class="projects-grid">
         <div class="project-card">
-          <img src="assets/project1.jpg" alt="Orologio SBB">
+          <img src="assets/project1.jpg" alt="Progetto 1">
           <div class="project-info">
-            <h3>Orologio SBB</h3>
-            <p>Riproduzione digitale fedele del celebre orologio svizzero delle Ferrovie Federali, sviluppata in JavaScript e CSS.</p>
-            <a href="https://miniutti.it/clock" target="_blank" class="btn-golden">Visita il progetto</a>
+            <h3>Progetto 1</h3>
+            <p>Descrizione accurata del progetto 1.</p>
+            <a href="https://miniutti.it/portfolio" target="_blank" class="btn-golden">Visita il progetto</a>
           </div>
         </div>
         <div class="project-card">
-          <img src="assets/project2.jpg" alt="Orbea Alma H50">
+          <img src="assets/project2.jpg" alt="Progetto 2">
           <div class="project-info">
-            <h3>Progetto Orbea Alma H50</h3>
-            <p>Studio grafico e tecnico della MTB Orbea Alma H50 2022, con focus su design, materiali e prestazioni.</p>
-            <a href="#" class="btn-golden" aria-disabled="true">In arrivo</a>
+            <h3>Progetto 2</h3>
+            <p>Descrizione accurata del progetto 1.</p>
+            <a href="https://miniutti.it/portfolio" target="_blank" class="btn-golden">Visita il progetto</a>
           </div>
         </div>
       </div>
@@ -361,7 +361,6 @@
         <h2>Chi sono</h2>
         <p>Sono Tobia, fotografo e videomaker di Bologna.  
         Creo contenuti visivi con stile cinematografico, precisione tecnica e una forte attenzione ai dettagli e alla luce.</p>
-        <a href="contatti.html" class="btn-golden">Collabora con me</a>
       </div>
     </section>
 
