Change hero background image to porta-brandeburgo

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     .hero {
       position: relative;
       height: 100vh;
-      background: url('hero.jpg') center/cover no-repeat;
+      background: url('porta-brandeburgo.jpg') center/cover no-repeat;
       display: flex;
       align-items: center;
       justify-content: center;
