Update footer copyright information

--- a/404.html
+++ b/404.html
@@ -139,7 +139,7 @@
   </main>
 
   <footer>
-    © 2025 miniutti.it — Tutti i diritti riservati
+    © 2025 tobia.me — Tutti i diritti riservati
   </footer>
 </body>
 </html>
