--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@
       --border-radius: 20px;
     }
 
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { margin:0; padding:0; box-sizing:border-box; }
 
     body {
       font-family: 'Outfit', sans-serif;
@@ -32,7 +28,6 @@
       overflow-x: hidden;
     }
 
-    /* Navbar */
     header {
       backdrop-filter: blur(14px);
       background: rgba(255 255 255 / 0.05);
@@ -43,286 +38,169 @@
       position: sticky;
       top: 0;
       z-index: 1100;
-      box-shadow: 0 2px 25px rgba(0, 0, 0, 0.85);
+      box-shadow: 0 2px 25px rgba(0,0,0,0.85);
     }
 
-    .logo {
-      height: 42px;
-      filter: drop-shadow(0 0 1.5px rgba(0,0,0,0.6));
-      user-select: none;
-    }
+    .logo { height:42px; filter: drop-shadow(0 0 1.5px rgba(0,0,0,0.6)); user-select:none; }
 
     nav a {
       position: relative;
       color: var(--white);
       text-decoration: none;
-      font-weight: 600;
-      margin-left: 2.5rem;
-      padding-bottom: 4px;
-      font-size: 1rem;
-      user-select: none;
+      font-weight:600;
+      margin-left:2.5rem;
+      padding-bottom:4px;
+      font-size:1rem;
+      user-select:none;
       transition: color var(--transition);
-      cursor: pointer;
+      cursor:pointer;
     }
 
     nav a::after {
       content: "";
       position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 0;
-      height: 3px;
+      bottom:0;
+      left:0;
+      width:0;
+      height:3px;
       background: linear-gradient(90deg, #008C45, #F4F5F0, #CD212A);
-      border-radius: 3px 3px 0 0;
+      border-radius:3px 3px 0 0;
       transition: width var(--transition);
     }
 
     nav a:hover::after,
-    nav a:focus-visible::after {
-      width: 100%;
-    }
+    nav a:focus-visible::after { width:100%; }
 
-    nav a:hover,
-    nav a:focus-visible {
-      color: var(--golden);
-      outline: none;
-    }
+    nav a:hover, nav a:focus-visible { color: var(--golden); outline:none; }
 
     /* Hero */
     .hero {
       position: relative;
-      height: 100vh;
+      height:100vh;
       background: url('porta-brandeburgo.jpg') center/cover no-repeat;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      color: var(--white);
-      overflow: hidden;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      text-align:center;
+      color:var(--white);
+      overflow:hidden;
     }
 
     .hero::after {
-      content: "";
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.55);
+      content:"";
+      position:absolute;
+      top:0; left:0;
+      width:100%; height:100%;
+      background: rgba(0,0,0,0.55);
     }
 
     .hero-content {
-      position: relative;
-      z-index: 2;
-      max-width: 700px;
-      animation: fadeIn 2s ease forwards;
+      position:relative;
+      z-index:2;
+      max-width:700px;
+      opacity:0;
+      transform:translateY(30px);
+      transition: opacity 1.2s ease, transform 1.2s ease;
     }
 
-    .hero-content h1 {
-      font-size: 3rem;
-      color: var(--golden);
-      margin-bottom: 1rem;
-    }
+    .hero-content.visible { opacity:1; transform:translateY(0); }
 
-    .hero-content p {
-      font-size: 1.2rem;
-      color: var(--anthracite);
-      margin-bottom: 2rem;
-    }
+    .hero-content h1 { font-size:3rem; color:var(--golden); margin-bottom:1rem; }
+    .hero-content p { font-size:1.2rem; color:var(--anthracite); margin-bottom:2rem; }
 
     .btn-golden {
-      display: inline-block;
-      padding: 0.85rem 2rem;
-      border: 2px solid var(--golden);
-      border-radius: 40px;
-      color: var(--golden);
-      text-decoration: none;
-      font-weight: 600;
-      transition: all var(--transition);
+      display:inline-block;
+      padding:0.85rem 2rem;
+      border:2px solid var(--golden);
+      border-radius:40px;
+      color:var(--golden);
+      text-decoration:none;
+      font-weight:600;
+      transition:all var(--transition);
     }
 
     .btn-golden:hover {
-      background: var(--golden);
-      color: var(--carbon);
-      box-shadow: 0 8px 20px rgba(201, 167, 76, 0.5);
+      background:var(--golden);
+      color:var(--carbon);
+      box-shadow:0 8px 20px rgba(201,167,76,0.5);
     }
 
-    /* Section base */
-    main {
-      max-width: 1100px;
-      margin: auto;
-      padding: 5rem 2rem;
-    }
+    main { max-width:1100px; margin:auto; padding:5rem 2rem; }
+    section { margin-bottom:5rem; }
+    h2.section-title { font-size:2.4rem; color:var(--golden); text-align:center; margin-bottom:2rem; }
 
-    section {
-      margin-bottom: 5rem;
-    }
+    .fade-up { opacity:0; transform:translateY(30px); transition: opacity 1.2s ease, transform 1.2s ease; }
+    .fade-up.visible { opacity:1; transform:translateY(0); }
 
-    h2.section-title {
-      font-size: 2.4rem;
-      color: var(--golden);
-      text-align: center;
-      margin-bottom: 2rem;
-    }
-
-    /* Progetti */
+    /* Progetti uniformi */
     .projects-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-      gap: 2.4rem;
+      display:grid;
+      grid-template-columns: repeat(auto-fit, minmax(320px,1fr));
+      gap:2.4rem;
+      align-items:start;
     }
 
     .project-card {
-      background: var(--carbon-deep);
-      border-radius: 20px;
-      overflow: hidden;
-      box-shadow: 0 10px 40px rgba(0,0,0,0.5);
+      display:flex;
+      flex-direction:column;
+      justify-content:space-between;
+      background:var(--carbon-deep);
+      border-radius:20px;
+      overflow:hidden;
+      box-shadow:0 10px 40px rgba(0,0,0,0.5);
       transition: transform var(--transition);
+      min-height: 380px;
     }
 
-    .project-card:hover {
-      transform: translateY(-5px);
-    }
+    .project-card:hover { transform: translateY(-5px); }
 
-    .project-card img {
-      width: 100%;
-      display: block;
-      object-fit: cover;
-      height: 200px;
-    }
+    .project-card img { width:100%; display:block; object-fit:cover; height:200px; }
+    .project-info { padding:1.6rem; display:flex; flex-direction:column; flex:1; }
 
-    .project-info {
-      padding: 1.6rem;
-    }
+    .project-info h3 { color:var(--golden); font-size:1.4rem; margin-bottom:0.8rem; }
+    .project-info p { color:var(--anthracite); font-size:1rem; line-height:1.6; margin-bottom:1.4rem; flex:1; }
 
-    .project-info h3 {
-      color: var(--golden);
-      font-size: 1.4rem;
-      margin-bottom: 0.8rem;
-    }
-
-    .project-info p {
-      color: var(--anthracite);
-      font-size: 1rem;
-      line-height: 1.6;
-      margin-bottom: 1.4rem;
-    }
-
-    /* Chi sono */
+    /* About e CTA */
     .about {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      gap: 2rem;
-      background: var(--carbon-deep);
-      border-radius: 20px;
-      padding: 3rem;
-      box-shadow: 0 10px 40px rgba(0,0,0,0.4);
+      display:flex; flex-wrap:wrap; align-items:center; gap:2rem;
+      background:var(--carbon-deep); border-radius:20px;
+      padding:3rem; box-shadow:0 10px 40px rgba(0,0,0,0.4);
     }
+    .about img { width:320px; border-radius:20px; }
+    .about-text { flex:1; }
+    .about-text h2 { color:var(--golden); margin-bottom:1rem; }
+    .about-text p { color:var(--anthracite); line-height:1.6; margin-bottom:1.5rem; }
 
-    .about img {
-      width: 320px;
-      border-radius: 20px;
-    }
-
-    .about-text {
-      flex: 1;
-    }
-
-    .about-text h2 {
-      color: var(--golden);
-      margin-bottom: 1rem;
-    }
-
-    .about-text p {
-      color: var(--anthracite);
-      line-height: 1.6;
-      margin-bottom: 1.5rem;
-    }
-
-    /* CTA finale */
     .contact-cta {
-      text-align: center;
-      padding: 4rem 2rem;
+      text-align:center;
+      padding:4rem 2rem;
       background: linear-gradient(180deg, rgba(201,167,76,0.05), rgba(0,0,0,0.8));
-      border-radius: 20px;
-      box-shadow: 0 5px 30px rgba(0,0,0,0.5);
+      border-radius:20px;
+      box-shadow:0 5px 30px rgba(0,0,0,0.5);
     }
+    .contact-cta h2 { color:var(--golden); margin-bottom:1rem; }
+    .contact-cta p { color:var(--anthracite); margin-bottom:2rem; }
 
-    .contact-cta h2 {
-      color: var(--golden);
-      margin-bottom: 1rem;
-    }
-
-    .contact-cta p {
-      color: var(--anthracite);
-      margin-bottom: 2rem;
-    }
-
-    /* Footer */
     footer {
-      background: var(--carbon-deep);
-      padding: 3rem 2rem;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 2rem;
-      border-top: 1px solid rgba(255, 255, 255, 0.05);
+      background:var(--carbon-deep);
+      padding:3rem 2rem;
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+      gap:2rem;
+      border-top:1px solid rgba(255,255,255,0.05);
     }
+    .footer-col h4 { color:var(--golden); margin-bottom:1rem; }
+    .footer-col ul { list-style:none; }
+    .footer-col ul li { margin:0.6rem 0; }
+    .footer-col ul li a { color:var(--anthracite); text-decoration:none; transition:var(--transition); }
+    .footer-col ul li a:hover { color:var(--white); }
+    .footer-bottom { grid-column:1 / -1; text-align:center; margin-top:2rem; font-size:0.9rem; color:var(--anthracite); }
 
-    .footer-col h4 {
-      color: var(--golden);
-      margin-bottom: 1rem;
+    @media(max-width:768px) {
+      .about { flex-direction:column; text-align:center; }
+      .about img { width:100%; max-width:400px; }
+      nav a { margin-left:1rem; }
     }
-
-    .footer-col ul {
-      list-style: none;
-    }
-
-    .footer-col ul li {
-      margin: 0.6rem 0;
-    }
-
-    .footer-col ul li a {
-      color: var(--anthracite);
-      text-decoration: none;
-      transition: var(--transition);
-    }
-
-    .footer-col ul li a:hover {
-      color: var(--white);
-    }
-
-    .footer-bottom {
-      grid-column: 1 / -1;
-      text-align: center;
-      margin-top: 2rem;
-      font-size: 0.9rem;
-      color: var(--anthracite);
-    }
-
-    /* Animazioni */
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(30px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-    .fade-up { animation: fadeIn 1.5s ease forwards; }
-
-    @media (max-width: 768px) {
-      .about { flex-direction: column; text-align: center; }
-      .about img { width: 100%; max-width: 400px; }
-      nav a { margin-left: 1rem; }
-    }
-
-    .fade-up, .hero-content {
-  opacity: 0;
-  transform: translateY(30px);
-  transition: opacity 1.2s ease, transform 1.2s ease;
-}
-
-.fade-up.visible, .hero-content.visible {
-  opacity: 1;
-  transform: translateY(0);
-}
-
   </style>
 </head>
 <body>
@@ -337,7 +215,7 @@
   </header>
 
   <section class="hero">
-    <div class="hero-content">
+    <div class="hero-content fade-up">
       <h1>Tobia Miniutti</h1>
       <p>Fotografo e Videomaker | Bologna</p>
       <a href="#portfolio" class="btn-golden">Scopri i miei lavori</a>
@@ -345,7 +223,7 @@
   </section>
 
   <main>
-        <section class="about fade-up">
+    <section class="about fade-up">
       <img src="assets/profile.jpg" alt="Tobia Miniutti">
       <div class="about-text">
         <h2>Chi sono</h2>
@@ -353,7 +231,7 @@
         Creo contenuti visivi con stile cinematografico, precisione tecnica e una forte attenzione ai dettagli e alla luce.</p>
       </div>
     </section>
-    
+
     <section id="portfolio" class="fade-up">
       <h2 class="section-title">I miei lavori</h2>
       <div class="projects-grid">
@@ -369,7 +247,7 @@
           <img src="assets/project2.jpg" alt="Progetto 2">
           <div class="project-info">
             <h3>Progetto 2</h3>
-            <p>Descrizione accurata del progetto 1.</p>
+            <p>Descrizione accurata del progetto 2.</p>
             <a href="https://miniutti.it/portfolio" target="_blank" class="btn-golden">Visita il progetto</a>
           </div>
         </div>
@@ -405,45 +283,18 @@
     </div>
     <div class="footer-bottom">© 2025 tobia.me — Tutti i diritti riservati</div>
   </footer>
-<script>
-  
-  // Seleziona tutti gli elementi da animare
-  const faders = document.querySelectorAll('.fade-up, .hero-content');
 
-  const appearOptions = {
-    threshold: 0.1,
-    rootMargin: "0px 0px -50px 0px"
-  };
-
-  const appearOnScroll = new IntersectionObserver((entries, appearOnScroll) => {
-    entries.forEach(entry => {
-      if (!entry.isIntersecting) return;
-      entry.target.classList.add('visible');
-      appearOnScroll.unobserve(entry.target);
-    });
-  }, appearOptions);
-
-  faders.forEach(fader => {
-    appearOnScroll.observe(fader);
-  });
-</script>
-
-<script>
-  // Seleziona tutti gli elementi con classe .fade-up o .hero-content
-  const faders = document.querySelectorAll('.fade-up, .hero-content');
-
-  const observer = new IntersectionObserver(entries => {
-    entries.forEach(entry => {
-      if (entry.isIntersecting) {
+  <script>
+    const faders = document.querySelectorAll('.fade-up, .hero-content');
+    const appearOptions = { threshold: 0.2, rootMargin: "0px 0px -50px 0px" };
+    const appearOnScroll = new IntersectionObserver((entries, observer) => {
+      entries.forEach(entry => {
+        if (!entry.isIntersecting) return;
         entry.target.classList.add('visible');
-        observer.unobserve(entry.target); // animazione una sola volta
-      }
-    });
-  }, { threshold: 0.2 });
-
-  faders.forEach(el => observer.observe(el));
-</script>
-
-  
+        observer.unobserve(entry.target);
+      });
+    }, appearOptions);
+    faders.forEach(fader => appearOnScroll.observe(fader));
+  </script>
 </body>
 </html>
