--- a/portfolio.html
+++ b/portfolio.html
@@ -1,2 +1,171 @@
-la sto facendo aspetti come tutti per vederla.
-https://www.youtube.com/watch?v=dQw4w9WgXcQ
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Tobia Miniutti | Portfolio</title>
+  <link rel="icon" href="favicon.png" type="image/png" />
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600&display=swap" rel="stylesheet" />
+
+  <style>
+    :root {
+      --carbon: #121212;
+      --carbon-deep: #0d0d0d;
+      --golden: #c9a74c;
+      --anthracite: #b3b3b3;
+      --white: #ffffff;
+      --transition: 0.3s ease-in-out;
+      --border-radius: 20px;
+    }
+
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font-family: 'Outfit', sans-serif; background: var(--carbon); color: var(--white); overflow-x: hidden; }
+
+    /* Navbar */
+    header {
+      backdrop-filter: blur(14px);
+      background: rgba(255 255 255 / 0.05);
+      padding: 1.3rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: sticky;
+      top: 0;
+      z-index: 1100;
+      box-shadow: 0 2px 25px rgba(0, 0, 0, 0.85);
+    }
+    .logo { height: 42px; filter: drop-shadow(0 0 1.5px rgba(0,0,0,0.6)); user-select: none; }
+    nav a {
+      position: relative; color: var(--white); text-decoration: none; font-weight: 600; margin-left: 2.5rem;
+      padding-bottom: 4px; font-size: 1rem; transition: color var(--transition); cursor: pointer;
+    }
+    nav a::after {
+      content:""; position: absolute; bottom:0; left:0; width:0; height:3px;
+      background: linear-gradient(90deg, #008C45, #F4F5F0, #CD212A); border-radius:3px 3px 0 0;
+      transition: width var(--transition);
+    }
+    nav a:hover::after, nav a:focus-visible::after { width:100%; }
+    nav a:hover, nav a:focus-visible { color: var(--golden); outline:none; }
+
+    main { max-width: 1100px; margin:auto; padding:5rem 2rem; }
+    h2.section-title { font-size:2.4rem; color:var(--golden); text-align:center; margin-bottom:2rem; }
+
+    /* Portfolio Grid */
+    .projects-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+      gap: 2.4rem;
+    }
+    .project-card {
+      background: var(--carbon-deep); border-radius: 20px; overflow: hidden;
+      box-shadow: 0 10px 40px rgba(0,0,0,0.5); transform: translateY(30px); opacity:0;
+      transition: transform 0.8s ease, opacity 0.8s ease;
+    }
+    .project-card.visible { transform: translateY(0); opacity:1; }
+    .project-card img { width:100%; height:200px; object-fit:cover; display:block; }
+    .project-info { padding:1.6rem; }
+    .project-info h3 { color: var(--golden); font-size:1.4rem; margin-bottom:0.8rem; }
+    .project-info p { color: var(--anthracite); font-size:1rem; line-height:1.6; margin-bottom:1.4rem; }
+    .btn-golden { display:inline-block; padding:0.85rem 2rem; border:2px solid var(--golden); border-radius:40px;
+      color: var(--golden); text-decoration:none; font-weight:600; transition: all var(--transition);}
+    .btn-golden:hover { background: var(--golden); color: var(--carbon); box-shadow:0 8px 20px rgba(201,167,76,0.5); }
+
+    /* Footer */
+    footer {
+      background: var(--carbon-deep); padding:3rem 2rem; display:grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap:2rem; border-top:1px solid rgba(255,255,255,0.05);
+    }
+    .footer-col h4 { color: var(--golden); margin-bottom:1rem; }
+    .footer-col ul { list-style:none; }
+    .footer-col ul li { margin:0.6rem 0; }
+    .footer-col ul li a { color: var(--anthracite); text-decoration:none; transition: var(--transition); }
+    .footer-col ul li a:hover { color: var(--white); }
+    .footer-bottom { grid-column:1/-1; text-align:center; margin-top:2rem; font-size:0.9rem; color: var(--anthracite); }
+
+    @media (max-width: 768px) {
+      nav a { margin-left:1rem; }
+    }
+  </style>
+</head>
+<body>
+
+<header>
+  <a href="index.html"><img src="favicon.png" alt="Logo miniutti.it" class="logo" /></a>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="portfolio.html" aria-current="page">Portfolio</a>
+    <a href="contatti.html">Contatti</a>
+  </nav>
+</header>
+
+<main>
+  <section id="portfolio">
+    <h2 class="section-title">I miei lavori</h2>
+    <div class="projects-grid">
+      <div class="project-card"><img src="assets/project1.jpg" alt="Progetto 1">
+        <div class="project-info">
+          <h3>Progetto 1</h3>
+          <p>Descrizione accurata del progetto 1.</p>
+          <a href="https://miniutti.it/portfolio" target="_blank" class="btn-golden">Visita il progetto</a>
+        </div>
+      </div>
+      <div class="project-card"><img src="assets/project2.jpg" alt="Progetto 2">
+        <div class="project-info">
+          <h3>Progetto 2</h3>
+          <p>Descrizione accurata del progetto 2.</p>
+          <a href="https://miniutti.it/portfolio" target="_blank" class="btn-golden">Visita il progetto</a>
+        </div>
+      </div>
+      <div class="project-card"><img src="assets/project3.jpg" alt="Progetto 3">
+        <div class="project-info">
+          <h3>Progetto 3</h3>
+          <p>Descrizione accurata del progetto 3.</p>
+          <a href="https://miniutti.it/portfolio" target="_blank" class="btn-golden">Visita il progetto</a>
+        </div>
+      </div>
+    </div>
+  </section>
+</main>
+
+<footer>
+  <div class="footer-col">
+    <h4>Miniutti.it</h4>
+    <p>Portfolio ufficiale di Tobia Miniutti — progetti, idee e sviluppo.</p>
+  </div>
+  <div class="footer-col">
+    <h4>Link rapidi</h4>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="portfolio.html">Portfolio</a></li>
+      <li><a href="contatti.html">Contatti</a></li>
+    </ul>
+  </div>
+  <div class="footer-col">
+    <h4>Contatti</h4>
+    <ul>
+      <li><a href="mailto:info@tobia.me">Email: info@tobia.me</a></li>
+      <li><a href="tel:+393791128232">Tel: +39 379 112 8232</a></li>
+    </ul>
+  </div>
+  <div class="footer-bottom">© 2025 tobia.me — Tutti i diritti riservati</div>
+</footer>
+
+<script>
+  const cards = document.querySelectorAll('.project-card');
+
+  const observer = new IntersectionObserver((entries) => {
+    entries.forEach((entry, index) => {
+      if (entry.isIntersecting) {
+        setTimeout(() => {
+          entry.target.classList.add('visible');
+        }, index * 200); // delay progressivo: 0, 0.2s, 0.4s...
+        observer.unobserve(entry.target);
+      }
+    });
+  }, { threshold: 0.2 });
+
+  cards.forEach(card => observer.observe(card));
+</script>
+
+</body>
+</html>
