--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
           <div class="project-info">
             <h3>Progetto 1</h3>
             <p>Descrizione accurata del progetto 1.</p>
-            <a href="https://miniutti.it/portfolio" target="_blank" class="btn-golden">Visita il progetto</a>
+            <a href="https://tobia.me/portfolio" target="_blank" class="btn-golden">Visita il progetto</a>
           </div>
         </div>
         <div class="project-card">
@@ -248,7 +248,7 @@
           <div class="project-info">
             <h3>Progetto 2</h3>
             <p>Descrizione accurata del progetto 2.</p>
-            <a href="https://miniutti.it/portfolio" target="_blank" class="btn-golden">Visita il progetto</a>
+            <a href="https://tobia.me/portfolio" target="_blank" class="btn-golden">Visita il progetto</a>
           </div>
         </div>
       </div>
